--- a/favorite-things.html
+++ b/favorite-things.html
@@ -8,10 +8,16 @@
   <h2>These are a few of my favorite things.</h2>
 
   <h3>People</h3>
-  <p>Here are some of my favorite people!</p>
+  <p>Here are some of my favorite <em>people</em>!</p>
   <ul>
-    <li>My brother Christopher</li>
-    <li>My mom and dad:
+    <li>
+      <a href="https://drchristophersherbshop.com/">
+        My brother <strong>Christopher</strong>
+        <img src="img/christopher.jpg" alt="A photo of Christopher"
+      </a>
+    </li>
+    <li>
+      My mom and dad:
       <ul>
         <li>Steve</li>
         <li>Carol</li>
